[package]
name = "helixlauncher-meta-gen"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
futures = "0.3"
helixlauncher-meta = {path = "helixlauncher-meta"}
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
maven-version-rs = "0.1.0"
regex = "1.7.3"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3.0.0"
sha1 = "0.10"
thiserror = "1"
tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
zip = "0.10.0-alpha.1"

[workspace]
