[package]
name = "helixlauncher-meta-gen"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = { version = "0.4.39", features = ["serde"] }
data-encoding = "2.7.0"
futures = "0.3.31"
helixlauncher-meta = { path = "helixlauncher-meta" }
indexmap = { version = "2.7.1", features = ["serde"] }
lazy_static = "1.5.0"
maven-version-rs = "0.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
sha1 = "0.10.6"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[workspace]
resolver = "2"
members = ["helixlauncher-meta"]
