[package]
name = "b2-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2-client = { version = "0.1.3", features = ["with_hyper"] }
b2creds = "0.2.0"
hex = "0.4.3"
sha1 = "0.10.5"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
walkdir = "2.3.3"
