[package]
name = "helixlauncher-meta"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "HelixLauncher meta library"
repository = "https://github.com/HelixLauncher/meta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_with = "2"
thiserror = "1"
