[package]
name = "helixlauncher-meta"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "HelixLauncher meta library"
repository = "https://github.com/HelixLauncher/meta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.11"
